feat(product): rely on DB FK to prevent deleting products; remove app-level reference counts; map DB FK violations to a generic business error; update schema to ON DELETE RESTRICT; update unit tests